--- a/mark/_config.yml
+++ b/mark/_config.yml
@@ -18,12 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mark Letterman
+title: Maui Letterman
 email: marfuah.suratman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  I am awesome
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://mark-pooh.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  mark-pooh
 
