--- a/mark/_config.yml
+++ b/mark/_config.yml
@@ -21,11 +21,9 @@
 title: Maui Letterman
 email: marfuah.suratman@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+  I am awesome
+baseurl: /mark # the subpath of your site, e.g. /blog
+url: mark-pooh.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  mark-pooh
 
